server pseudo multi-user support

--- a/report/report.tex
+++ b/report/report.tex
@@ -73,21 +73,24 @@
 
 \section{实验设计与内容}
 
-\subsection{程序整体设计流程}
+\subsection{客户端}
 
 \subsubsection{具体实现}
-
-\subsection{后端工作流程}
 
 \subsubsection{工作流程}
 
-\subsubsection{具体实现}
 
+\subsection{服务器}
+\subsubsection{工作流程}
+\subsubsection{具体实现}
+\subsubsection{编译运行}
+server文件夹下已经有makefile，使用make命令即可编译，开启了pthread和std=c++11的编译选项
+
+使用make run命令可以运行
 
 \section{实验结果与分析}
 
 \section{实验中遇到的问题}
-
 
 
 \section{实验总结}
